Request service tests validation